<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPassiveSkillPower"
                    android:layout_weight="1"
                    android:text="@string/dump"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPassiveSkillType"
                    android:layout_weight="1"
                    android:text="@string/dump"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/target"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPassiveSkillTarget"
                    android:layout_weight="1"
                    android:text="@string/dump"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:text="@string/soul_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvPassiveSkillSoulSize"
                    android:layout_weight="1"
                    android:text="@string/dump"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </LinearLayout>





    </LinearLayout>




</LinearLayout>